welcome.lessons.welcome.array.array667.Array667.scala.error
array667:24: error: ')' expected but 'if' found.
if(indexOfValue(nums,6)==(-1)){
^